# halide-haskell

./: .gitignore  CHANGELOG.md  Makefile  README.md  Setup.hs  cabal.project  cabal.project.local  configure  flake.nix  halide-haskell.cabal  halide.nix  hie.yaml  print_loop_nest.patch  shell.nix
.github/workflows/: ci.yml
app/: Main.hs  Makefile  foo_generator.cpp
cbits/: closure.cpp  dummy_generator.cpp  test.cpp
example/: Example01.hs  GettingStarted.hs  MinimalGPU.hs
halide-JuicyPixels/: CHANGELOG.md  LICENSE  README.md  halide-JuicyPixels.cabal
halide-JuicyPixels/src/Language/Halide/: JuicyPixels.hs
halide-JuicyPixels/test/: Main.hs
halide-arrayfire/: README.md  halide-arrayfire.cabal
halide-arrayfire/src/Language/Halide/: ArrayFire.hs
halide-arrayfire/test/: Spec.hs
nix/: arrayfire-no-download.patch  arrayfire.nix  forge-no-download.patch  forge.nix  halide.nix
src/: Halide.hs  HalideHaskell.hs
src/Language/: Halide.hs
src/Language/Halide/: BoundaryConditions.hs  Buffer.hs  Context.hs  Dimension.hs  Expr.hs  FunPtr.hs  Func.hs  Internal.hs  Kernel.hs  LoopLevel.hs  Prelude.hs  RedundantConstraints.hs  Schedule.hs  Target.hs  Trace.hs  Type.hs  Utils.hs
src/Language/Halide/Internal/: Context.hs  Types.hs
template/: README.md  flake.nix  halide-haskell-playground.cabal
template/src/: Playground.hs
template/test/: Main.hs
test/: Spec.hs  Utils.hs  exceptions.cpp  write_to_ostream.cpp
test-readme/: README.lhs  halide-readme.cabal
test/Language/Halide/: BoundaryConditionsSpec.hs  BufferSpec.hs  ExprSpec.hs  FuncSpec.hs  KernelSpec.hs  LoopLevelSpec.hs  ScheduleSpec.hs  TargetSpec.hs  Tutorial01Spec.hs  Tutorial05Spec.hs
tutorials/: README.md
tutorials/01-Basics/: README.md  halide-tutorial01.cabal
tutorials/03-Inspecting/: README.md  gradient.html  halide-tutorial03.cabal
tutorials/04-Debugging/: README.md  halide-tutorial04.cabal
tutorials/05-Scheduling/: README.md  halide-tutorial05.cabal  test.hs
