cabal-version:   3.0
name:            halide-haskell
version:         0.0.1.0
synopsis:        See README for more info
description:     See README for more info
homepage:        https://github.com/twesterhout/halide-haskell
bug-reports:     https://github.com/twesterhout/halide-haskell/issues
license:         BSD-3-Clause
license-file:    LICENSE
author:          Tom Westerhout
maintainer:
  Tom Westerhout <14264576+twesterhout@users.noreply.github.com>

copyright:       2022-2023 Tom Westerhout
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:     GHC ==9.0.2 || ==9.2.4 || ==9.2.5 || ==9.4.4

source-repository head
  type:     git
  location: https://github.com/twesterhout/halide-haskell.git

common common-options
  build-depends:      base >=4.13.0.0 && <5
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  if impl(ghc >=8.0)
    ghc-options: -Wredundant-constraints

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies

  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    DataKinds
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    MultiParamTypeClasses
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Language.Halide
    Language.Halide.Buffer
    Language.Halide.Context
    Language.Halide.Dimension
    Language.Halide.Expr
    Language.Halide.Func
    Language.Halide.Kernel
    Language.Halide.Prelude
    Language.Halide.Schedule
    Language.Halide.Target
    Language.Halide.Type
    Language.Halide.Utils

  build-depends:
    , bytestring
    , constraints
    , inline-c
    , inline-c-cpp
    , primitive
    , template-haskell
    , temporary
    , text
    , unix
    , vector

  -- For dlopen
  extra-libraries:
    Halide
    stdc++

executable halide-haskell
  import:         common-options
  hs-source-dirs: example
  main-is:        Example01.hs
  build-depends:
    , halide-haskell
    , vector

executable getting-started
  import:         common-options
  hs-source-dirs: example
  main-is:        GettingStarted.hs
  build-depends:
    , halide-haskell
    , vector

test-suite halide-haskell-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
    Language.Halide.ExprSpec
    Language.Halide.FuncSpec
    Language.Halide.KernelSpec
    Language.Halide.ScheduleSpec
    Language.Halide.TargetSpec

  build-depends:
    , halide-haskell
    , hspec
    , hspec-discover
    , inline-c
    , inline-c-cpp
    , QuickCheck
    , text
    , vector

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

-- build-tool-depends: hspec-discover:hspec-discover
