cabal-version:   3.0
name:            halide-haskell
version:         0.0.1.0
synopsis:        See README for more info
description:     See README for more info
homepage:        https://github.com/twesterhout/halide-haskell
bug-reports:     https://github.com/twesterhout/halide-haskell/issues
license:         BSD-3-Clause
license-file:    LICENSE
author:          Tom Westerhout
maintainer:
  Tom Westerhout <14264576+twesterhout@users.noreply.github.com>

copyright:       2022-2023 Tom Westerhout
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:     GHC ==9.2.4 || ==9.2.5 || ==9.4.4

source-repository head
  type:     git
  location: https://github.com/twesterhout/halide-haskell.git

common common-options
  build-depends:      base >=4.16.0.0 && <5
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  if impl(ghc >=8.0)
    ghc-options: -Wredundant-constraints

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies

  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    DataKinds
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    MultiParamTypeClasses
    OverloadedRecordDot
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Language.Halide
    Language.Halide.Buffer
    Language.Halide.Context
    Language.Halide.Dimension
    Language.Halide.Expr
    Language.Halide.Func
    Language.Halide.Kernel
    Language.Halide.LoopLevel
    Language.Halide.Prelude
    Language.Halide.RedundantConstraints
    Language.Halide.Schedule
    Language.Halide.Target
    Language.Halide.Trace
    Language.Halide.Type
    Language.Halide.Utils

  build-depends:
    , bytestring        >=0.11.1.0 && <0.12
    , constraints       >=0.13.4   && <0.14
    , filepath          >=1.4.2.1  && <2.0
    , inline-c          >=0.9.1.6  && <0.10
    , inline-c-cpp      >=0.5.0.0  && <0.6
    , primitive         >=0.7.3.0  && <0.8
    , template-haskell  >=2.18.0.0 && <3.0
    , temporary         >=1.3      && <2.0
    , text              >=1.2.5.0  && <3.0
    , unix              >=2.7.2.2  && <3.0
    , vector            >=0.12.3.1 && <0.13

  -- For dlopen
  extra-libraries:
    Halide
    stdc++

executable halide-haskell
  import:         common-options
  hs-source-dirs: example
  main-is:        Example01.hs
  build-depends:
    , halide-haskell
    , vector

executable getting-started
  import:         common-options
  hs-source-dirs: example
  main-is:        GettingStarted.hs
  build-depends:
    , halide-haskell
    , vector

test-suite halide-haskell-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hss
  other-modules:
    Language.Halide.BufferSpec
    Language.Halide.ExprSpec
    Language.Halide.FuncSpec
    Language.Halide.KernelSpec
    Language.Halide.LoopLevelSpec
    Language.Halide.ScheduleSpec
    Language.Halide.TargetSpec
    Language.Halide.Tutorial01Spec
    Language.Halide.Tutorial05Spec
    Utils

  build-depends:
    , halide-haskell
    , hspec
    , HUnit
    , inline-c
    , inline-c-cpp
    , QuickCheck
    , text
    , vector

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-tools-depends: hspec-discover:hspec-discoverrrr
