cabal-version: 3.0
name:          halide-arrayfire
version:       0.0.1.0
synopsis:      Integration between Halide and ArrayFire

-- description:
homepage:      https://github.com/twesterhout/halide-haskell
license:       BSD-3-Clause
license-file:  LICENSE
author:        twesterhout
maintainer:    14264576+twesterhout@users.noreply.github.com

-- copyright:
category:      Language
build-type:    Simple

-- extra-doc-files:
-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  Language.Halide.ArrayFire

  -- other-modules:
  -- other-extensions:
  build-depends:
    , arrayfire       >=0.7.0.0  && <0.8
    , base            >=4.16.0.0 && <5
    , halide-haskell  >=0.0.2.0  && <0.1

  hs-source-dirs:   src
  default-language: GHC2021

test-suite halide-arrayfire-test
  import:           warnings
  default-language: GHC2021

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:
    , base
    , halide-arrayfire
