cabal-version: 3.0
name:          halide-haskell-playground
version:       0.0.1.0

-- synopsis:
-- description:
license:       BSD-3-Clause
license-file:  LICENSE
author:        twesterhout
maintainer:    14264576+twesterhout@users.noreply.github.com
build-type:    Simple

-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  Playground
  build-depends:
    , base            >=4.16.4.0 && <5
    , halide-haskell  >=0.0.2    && <0.1

  hs-source-dirs:   src
  default-language: GHC2021

test-suite halide-haskell-playground-test
  import:           warnings
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , halide-haskell
    , halide-haskell-playground
    , hspec
