cabal-version:   3.0
name:            halide-tutorial01
version:         0.0.1.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          twesterhout
maintainer:      14264576+twesterhout@users.noreply.github.com
build-type:      Simple

common setup
  ghc-options: -W -pgmL markdown-unlit
  default-language: GHC2021
  build-depends:    base >=4.16.0.0 && <5
                  , vector
                  , halide-haskell
                  , hspec
  -- build-tools-depends:  markdown-unlit:exe:markdown-unlit

executable halide-tutorial01
  import:           setup
  main-is:          README.lhs
  hs-source-dirs:   .

test-suite halide-tutorial01-test
  import:           setup
  main-is:          README.lhs
  type:             exitcode-stdio-1.0
